# slangennest

./: .env.example  .gitattributes  .gitignore  pyproject.toml  taskfile.yaml
.github/: dependabot.yaml
.github/workflows/: material-mkdocs-insiders.yaml  publish.yaml
src/: compile.py
src/package_list_builder/: main.py
version/: mkdocs-material-insiders.txt
